# sql-protocol

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  clippy.toml  rustfmt.toml
example/: server.rs
src/: constants.rs  errors.rs  lib.rs
src/proto/: auth.rs  connection.rs  greeting.rs  listener.rs  mod.rs  packet.rs  packets.rs  stream.rs
src/sql_type/: mod.rs  query.proto
tests/: test_server.rs
