[package]
name = "sql_protocol"
version = "0.1.0"
authors = ["da2018 <da2018t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
byteorder = "1.3.4"
sha-1 = "0.8.2"
quick-error = "1.2.3"
dakv_logger = "0.1.1"
sqlparser = "0.5.0"
lazy_static = "1.4.0"

[[example]]
name = "server"
path = "example/server.rs"
